--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "passport-local-mongoose": "4.0.0",
     "pug": "2.0.0-beta6",
     "slugs": "0.1.3",
+    "socket.io": "^2.0.4",
     "uuid": "3.0.1",
     "validator": "7.0.0"
   },
