--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "prod": "node ./start.js",
     "watch": "nodemon ./start.js",
-    "start": "concurrently \"npm run watch\" \"npm run assets\" --names \"💻,📦\" --prefix name",
+    "start": "node ./start.js",
     "assets": "webpack -w --display-max-modules 0",
     "now": "now -e DB_USER=@db_user -e DB_PASS=@db_pass -e NODE_ENV=\"production\" -e PORT=80"
   },
