--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mongoose": "4.8.7",
     "mongoose-mongodb-errors": "0.0.2",
     "multer": "1.3.0",
+    "node-notifier": "^5.1.2",
     "nodemailer": "3.1.5",
     "passport": "0.3.2",
     "passport-local": "1.0.0",
