--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "dang-thats-delicious",
-  "version": "0.0.0",
+  "name": "tek-project",
+  "version": "1.0.0",
   "private": true,
   "engines": {
     "node": ">= 7.6.0"
@@ -9,8 +9,7 @@
     "prod": "node ./start.js",
     "watch": "nodemon ./start.js",
     "start": "node ./start.js",
-    "assets": "webpack -w --display-max-modules 0",
-    "now": "now -e DB_USER=@db_user -e DB_PASS=@db_pass -e NODE_ENV=\"production\" -e PORT=80"
+    "assets": "webpack -w --display-max-modules 0"
   },
   "browserslist": "last 2 versions",
   "dependencies": {
@@ -46,19 +45,5 @@
     "socket.io": "^2.0.4",
     "uuid": "3.0.1",
     "validator": "7.0.0"
-  },
-  "devDependencies": {
-    "autoprefixer": "6.7.7",
-    "babel-core": "6.24.0",
-    "babel-loader": "6.4.0",
-    "babel-preset-es2015": "6.24.0",
-    "concurrently": "3.4.0",
-    "css-loader": "0.27.3",
-    "extract-text-webpack-plugin": "2.1.0",
-    "node-sass": "4.5.0",
-    "nodemon": "1.11.0",
-    "postcss-loader": "1.3.3",
-    "sass-loader": "6.0.3",
-    "webpack": "2.2.1"
   }
 }
